--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ gems:
 #baseurl: "/projectname"
 url: ""
 enforce_ssl: ""
-baseurl: "/ether.github.io"
+baseurl: "/ether"
 
 # Title of website
 title: Project Name
