--- a/_config.yml
+++ b/_config.yml
@@ -1,93 +1,55 @@
-# Build settings
-# Gems
-gems:
-- jekyll-paginate
-- jekyll-feed
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-# url is the full website URL
-# baseurl is the website's URL without the hostname
-# If you are hosting it on Github for some project with name 'projectname', then the url and baseurl should look like:
-#url: "http://username.github.io/projectname"
-#baseurl: "/projectname"
-url: ""
-enforce_ssl: ""
-baseurl: "/ether"
-
-# Title of website
+# Site settings
 title: Ether Explorations
+email: your-email@domain.com
+description: > # this means to ignore newlines until "baseurl:"
+  Webjeda Cards is a Bootstrap based jekyll theme for portfolio, photography or any kind of blog.
 
-#Default keywords (used if no keywords are specified on a page basis)
-keywords: music, art, community
 
-# Short description of your site
-desc: Sample Description
-meta_description: "Art and Music"
 
-# --- Navigation bar options --- #
+baseurl: "/ether" # the subpath of your site, e.g. /blog
+url: "http://webjeda.com" # the base hostname & protocol for your site
 
-# Image to show in the navigation bar - image must be a square (width = height)
-# Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar.jpg"
+#sidebar
+default-image: webjeda-logo-big.jpg # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
 
-# List of links in the navigation bar
-nav-links:
-  Home: ""
-  About Me: "aboutme"
-  Contact: "contact"
+#footer
+built-by: webjeda
+copyright:
+   name: webjeda
+   link: 'http://etherexplorations.com'
 
-# --- Footer options --- #
-
-# If the values are empty, they are ignored
-profile:
-  name: Ether Explorations
-  email: etherexplorations@gmail.com
-  facebook: your-fb-id
-  github: your-github-id
-  twitter: your-twitter-id
-
-# To display link in the footer section
-pretty-url: "etherexplorations.com"
-
-# --- Misc --- #
-
-# Your Disqus profile (shortname) settings
-disqus: "Your-Disqus-Id"
-
-# Google Analytics Settings
-google_analytics: "Your-GA-Id"
-
-# Set these options as you need (For more information, check Jekyll's site)
-timezone: "United States"
+# Build settings
 markdown: kramdown
-#highlighter: rouge
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
-permalink: /blog/:title
-paginate: 5
+permalink: /:title/
+paginate: 6
+paginate_path: /page:num/
 
-# Default YAML values (more information on Jekyll's site)
-defaults:
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      comments: true  # add comments to all blog posts
-  -
-    scope:
-      path: "" # all files
-    values:
-      layout: "default"
-      show-avatar: true
+# Tracker
+analytics: UA-83979019-1
 
-# Exclude these files from production site
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - CNAME
+# Comments
+disqus-shortname: webjeda-demo
 
-created-by: Digital Scraps
-creator-url: https://bchetty.com
+#social
+facebook: http://facebook.com/webjeda
+twitter: http://twitter.com/@webjeda
+github: http://github.com/ether-explorations
+
+#facebook like box
+fb-app-id: 
+fb-page-url:
+fb-page-title:
+
+# Sass style
+sass:
+  style: compressed
+
+# Ruby Gems
+gems: [jekyll-paginate, jekyll-seo-tag]
