--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site settings
 title: Ether Explorations
-email: your-email@domain.com
+email: etherexplorations@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Webjeda Cards is a Bootstrap based jekyll theme for portfolio, photography or any kind of blog.
+Ether Exploration is a music and art zine.
 
 
 
@@ -35,7 +35,7 @@ paginate_path: /page:num/
 analytics: UA-83979019-1
 
 # Comments
-disqus-shortname: ether
+disqus-shortname: Ether Explorations
 
 #social
 facebook: http://facebook.com/
