fix config file

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Ether Explorations
 email: etherexplorations@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-Ether Exploration is a music and art zine.
+"Ether Exploration is a music and art zine."
 
 
 
