changing index.html

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ twitter: http://twitter.com/
 github: http://github.com/ether-explorations
 
 #facebook like box
-fb-app-id: "219048615215967"
+fb-app-id: ""
 fb-page-url: "https://www.facebook.com/Ether-Explorations-219048615215967/"
 fb-page-title: "Ether Explorations"
 
