--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ copyright:
 markdown: kramdown
 permalink: /:title/
 paginate: 6
-paginate_path: /page:num/
+paginate_path: /events/page:num/
 
 # Tracker
 analytics: UA-83979019-1
