--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ disqus-shortname: Ether Explorations
 facebook: http://facebook.com/
 twitter: http://twitter.com/
 github: http://github.com/ether-explorations
+soundcloud: https://soundcloud.com/etherexplorations
+bandcamp: https://etherexplorations.bandcamp.com
 
 #facebook like box
 fb-app-id: ""
