--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Ether Explorations
 email: etherexplorations@gmail.com
-description: > # this means to ignore newlines until "baseurl:
+description: "Ether is a series of compilations, webzines, and events created through international collaborative effort."
 
 
 
@@ -34,14 +34,14 @@ paginate_path: /events/page:num/
 analytics: UA-83979019-1
 
 # Comments
-disqus-shortname: Ether Explorations
+disqus-shortname: "Ether Explorations"
 
 #social
-facebook: http://facebook.com/etherexplorations/
-twitter: http://twitter.com/
-github: http://github.com/ether-explorations
-soundcloud: https://soundcloud.com/etherexplorations
-bandcamp: https://etherexplorations.bandcamp.com
+facebook: "http://facebook.com/etherexplorations/"
+twitter: "http://twitter.com/"
+github: "http://github.com/ether-explorations"
+soundcloud: "https://soundcloud.com/etherexplorations"
+bandcamp: "https://etherexplorations.bandcamp.com"
 
 #facebook like box
 fb-app-id: "219048615215967"
