working with style

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ disqus-shortname: "Ether Explorations"
 #social
 facebook: "http://facebook.com/etherexplorations/"
 twitter: "http://twitter.com/"
-github: "http://github.com/ether-explorations"
+github: "https://github.com/ether-explorations/ether-explorations.github.io"
 soundcloud: "https://soundcloud.com/etherexplorations"
 bandcamp: "https://etherexplorations.bandcamp.com"
 
