--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: "Ether is a series of compilations, webzines, and events created th
 url: "http://www.etherexplorations.com" # the base hostname & protocol for your site
 
 #sidebar
-default-image: webjeda-logo-big.jpg # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
+default-image:  # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
 
 #footer
 built-by: digitalscraps
