--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ copyright:
 markdown: kramdown
 permalink: /:title/
 paginate: 6
-paginate_path: /news/page:num/
+paginate_path: /page:num/
 
 # Tracker
 analytics: UA-83979019-1
