updating info page

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Ether Explorations
-email: etherexplorations@gmail.com
+email: ether.explorations@gmail.com
 description: "Ether is a series of compilations, webzines, and events created through international collaborative effort."
 
 
