--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: "Ether is a series of compilations, webzines, and events created th
 
 
 
-baseurl: "/events.html"
+baseurl: "/events/"
 url: "http://www.etherexplorations.com" # the base hostname & protocol for your site
 
 #sidebar
